Adding company text boxes

--- a/business_app/app/templates/interviewQA.html
+++ b/business_app/app/templates/interviewQA.html
@@ -87,6 +87,15 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 
 <br>
 
+<p>Company or Event Name</p>
+<input type="text" id="Qcompany" name="company" placeholder="Type here..">
+
+    <button class="accordion" type="button">Why?</button>
+<div class="panel">
+  <p>Tip: Place company name here so that when you look at your responses for the following questions, you can taylor your
+	responses uniquely to this company. Your responses will save under your profile page.</p>
+</div>	
+	
 <p>Tell me about yourself.</p>
 <input type="text" id="Qyourself" name="yourself" placeholder="Type here..">
 
