company added to interview Q&A template fixed

--- a/business_app/app/templates/profile.html
+++ b/business_app/app/templates/profile.html
@@ -84,7 +84,7 @@
             <li class="list-group-item">
               <div class="row toggle" id="dropdown-detail-{{ a['id'] }}" data-toggle="detail-{{ a['id'] }}" value="Responses">
 		<div class="col-xs-10">
-                    {{ Responses }}
+                    {{ a['company'] }}
                 </div>
                 <div class="col-xs-2"><i class="fa fa-chevron-down pull-right"></i></div>
             </div>
